force-app/main/default/objects/Application__c/fields/Application_Withdrawn__c.field-meta.xml
<CustomField>
    <fullName>Application_Withdrawn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to flag when an applicant has requested to withdraw from the Application process. Checking this will remove stop them from receiving any further Application Nurturing communications.</description>
    <label>Application Withdrawn</label>
    <type>Checkbox</type>
</CustomField>