force-app/main/default/objects/Application__c/fields/Approved_by_RM__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_RM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Application Nurturing communication process. Indicates that Recruitment Manager has assessed the applicant during the initial conversation call and determined that they can be omitted from comms until the final stages of the process.</description>
    <label>Approved by RM</label>
    <type>Checkbox</type>
</CustomField>