force-app/main/default/objects/Application__c/fields/Last_Application_Nurturing_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Application_Nurturing_Activity__c</fullName>
    <description>The last activity performed during the Application Nurturing process.</description>
    <label>Last Application Nurturing Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Send Application Opened Email</fullName>
            </value>
            <value>
                <fullName>Application Opened Email sent</fullName>
            </value>
            <value>
                <fullName>Send Schedule an Initial Call Email</fullName>
            </value>
            <value>
                <fullName>Schedule an Initial Call Email sent</fullName>
            </value>
            <value>
                <fullName>Create &apos;Conduct Initial Conversation Call&apos; Reminder</fullName>
            </value>
            <value>
                <fullName>Initial Conversation Call completed</fullName>
            </value>
            <value>
                <fullName>Trigger &apos;Application Workshop SMS&apos;</fullName>
            </value>
            <value>
                <fullName>Application Workshop SMS sent</fullName>
            </value>
            <value>
                <fullName>Send Application Tips Email</fullName>
            </value>
            <value>
                <fullName>Application Tips Email sent</fullName>
            </value>
            <value>
                <fullName>Create &apos;Second Attempt at Initial Call&apos; Reminder</fullName>
            </value>
            <value>
                <fullName>Second Attempt Initial Call completed</fullName>
            </value>
            <value>
                <fullName>Trigger &apos;Book a Call with your RM SMS&apos;</fullName>
            </value>
            <value>
                <fullName>Book a Call with your RM SMS sent</fullName>
            </value>
            <value>
                <fullName>Send Upcoming Events/Workshop Email</fullName>
            </value>
            <value>
                <fullName>Upcoming Events/Workshop Email sent</fullName>
            </value>
            <value>
                <fullName>Create &apos;Conduct Commitment Discussion Call&apos; Reminder</fullName>
            </value>
            <value>
                <fullName>Commitment Discussion Call completed</fullName>
            </value>
            <value>
                <fullName>Send Complete Your Application Email</fullName>
            </value>
            <value>
                <fullName>Complete Your Application Email sent</fullName>
            </value>
            <value>
                <fullName>Trigger &apos;Reminder to Submit SMS&apos;</fullName>
            </value>
            <value>
                <fullName>Reminder to Submit SMS sent</fullName>
            </value>
            <value>
                <fullName>Send Final Follow-up Email</fullName>
            </value>
            <value>
                <fullName>Final Follow-up Email sent</fullName>
            </value>
            <value>
                <fullName>Review Application</fullName>
            </value>
            <value>
                <fullName>Application Review complete</fullName>
            </value>
            <value>
                <fullName>Contact marked as unresponsive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>