force-app/main/default/objects/Application__c/fields/PACA_Booking_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>PACA_Booking_Date_Time__c</fullName>
    <label>PACA Booking Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>