force-app/main/default/objects/Application__c/fields/PACA_Outcome_Delivered__c.field-meta.xml
<CustomField>
    <fullName>PACA_Outcome_Delivered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PACA Outcome Delivered</label>
    <type>Checkbox</type>
</CustomField>